🎨 style(Form.js): fix class name order and add styles for freetext field 🐛 fix(GenerateField.js): wrap error message in span tag 🎨 style(Form.module.scss): adjust styles for qGroup classes and add styles for text_optin class 🎨 style(_forms.scss): adjust styles for input.is-invalid and div[aria-labelledby="checkbox-group"] classes, add styles for degree_level and program_of_interest classes

--- a/src/styles/global/components/Form.module.scss
+++ b/src/styles/global/components/Form.module.scss
@@ -5,41 +5,36 @@
     flex-flow: row wrap;
     gap: 1rem;
     width: 100%;
-    max-width: 45rem;
+    max-width: 38rem;
     margin-bottom: tokens.$baseUnit * 3;
 }
 
 .qGroup {
     flex: 1 0 15rem;
+    color: tokens.$c-error;
 
     &:nth-child(3) {
         flex: 1 0 100%;
     }
 
-    &.text{
-        border: 1px solid orange;
+    &.text, &.email, &.tel, &.checkboxgrp, &.select{
+        border: none;
     }
-    &.email{
-        border: 1px solid blueviolet;
-    }
-    &.tel{
-        border: 1px solid green;
-    }
-    &.checkboxgrp{
-        border: 1px solid red;
-    }
-    &.select{
-        border: 1px solid yellow;
-    }
-    &.freetext{
-        border: 1px solid lightgreen;
-        flex: 1 0 100%;
 
+    &.freetext{
+        flex: 1 0 100%;
+        font-size: tokens.$fs-xs;
+        a{
+            text-decoration: none;
+            font-weight: 400;
+        }
     }
 
     &.button{
-        // display: none;
-        // visibility: hidden;
+        background: none;
+        border-radius: 0;
+        border: none;
+        padding: 0;
     }
 }
 
